# GB_Flask

./: .gitignore  Dockerfile  README.md  config.py  docker-compose.yaml  pyproject.toml  requirements.txt  wsgi.py
blog/: admin.py  app.py  commands.py  config.py  extensions.py  geekblog.db
blog/api/: __init__.py  article.py  author.py  tag.py  user.py
blog/article/: views.py
blog/auth/: view.py  views.py
blog/author/: views.py
blog/forms/: __init__.py  article.py  auth.py  author.py
blog/main/: view.py
blog/models/: __init__.py  article.py  author.py  database.py  post.py  tag.py  user.py
blog/permissions/: __init__.py  article.py  user.py
blog/post/: views.py
blog/schemas/: __init__.py  article.py  author.py  tag.py  user.py
blog/templates/: base.html  navbar.html
blog/templates/admin/: index.html
blog/templates/article/: create.html  detail.html  list.html
blog/templates/auth/: login.html  registration.html
blog/templates/author/: create.html  detail.html  list.html
blog/templates/macro/: formhelpers.html
blog/templates/main/: index.html
blog/templates/post/: detail.html  list.html
blog/templates/user/: detail.html  list.html
blog/user/: views.py
migrations/versions/: 1beabf0f13d4_.py  1d9ceb83e01d_.py  1ecf6ed3f65b_.py  2619ff683bf3_.py  c069d28307af_update_user_model.py  d79f9428e6fa_.py  df9d44fda5a5_.py  fb694908e61e_edited_email_field_to_user_model.py
pg_data/: postmaster.pid
pg_data/global/: 1260  1262  2671  2676  pg_control  pg_internal.init
pg_data/pg_stat_tmp/: db_0.stat  db_13458.stat  global.stat
(+2 files in other folders)
